assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700|Quicksand:100,200,300,400,500,600,700");

/* ---------------------------------------------Background Colours */

#home {
    background-color: #0892d0;
}

#about {
    background-color: #f1f3f5;
}

#skills {
    background-color: #e5eaed;
}

#portfolio {
    background-color: #f1f3f5;
}

#contact {
    background-color: #d1ca1d;
}

#footer {
    background-color: #d1ca1d;
}

/* ---------------------------------------------Header */
/* ---------------------------------------------Nav */
nav {
  height: 50px;
  background-color: #36454f;
  border: none;
}

#circle-cover-bg {
  display: block;
  background: url("../images/cartwheel-sq.jpg") no-repeat center center;
  background-size: 110%;
  width: 10vh;
  height: 0;
  padding-bottom: 10vh;
  border: 3px solid#36454f;
  border-radius: 50%;
}

#menu-md {
  font-size: 120%;
  list-style-type: none;
  letter-spacing: 4px;
  text-align: right;
  margin-top: 5px;
}

#menu-md li {
  display: inline;
  margin-right: 30px;
}

#menu-md a {
  font-family: "Quicksand", sans-serif;
  color: #f1f3f5;  
  text-decoration: none;
}

#menu-md a:hover {
    border-bottom: 1px solid #f1f3f5;
}

.active {
    border-bottom: 1px solid;
    border-color: inherit;
}

#menu-xs {
  color: #f1f3f5;
  font-size: 200%;
  text-align: right;
  margin: 5px;
}

/* ---------------------------------------------Content */

header h1,
header h2 {
  font-family: "Raleway", sans-serif;
  color: #f1f3f5;
  text-align: center;
  animation: appear 8s infinite;
  animation-delay: 4s;
  opacity: 0;
}

@keyframes appear {
    0% {
        opacity: 1;
    }
    1% {
        opacity: 0;
    }
    3% {
        opacity: 1;
    }
    4% {
        opacity: 0;
    }
    6% {
        opacity: 1;
    }
    7% {
        opacity: 0;
    }
    8% {
        opacity: 1;
    }
    11% {
        opacity: 0;
    }
    12% {
        opacity: 1;
    }
    99% {
        opacity: 1;
    }
}

header blockquote {
  font-family: "Raleway", sans-serif;
  color: #36454f;
  text-align: center;
  font-size: 1.5rem;
  animation: disappear 8s infinite;
  animation-delay: 4s;
  
}

@keyframes disappear {
    0% {
        opacity: 0;
    }
    1% {
        opacity: 1;
    }
    5% {
        opacity: 0;
    }
    7% {
        opacity: 1;
    }
    8% {
        opacity: 0;
    }
    10% {
        opacity: 1;
    }
    11% {
        opacity: 0;
    }
    12% {
        opacity: 1;
    }
    13% {
        opacity: 0;
    }
    99% {
        opacity: 0;
    }
}

#home-text {
  height: 100vh;
  padding-top: 10vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* ---------------------------------------------About */

.section-title {
  height: 15vh;
  margin-bottom: 20px;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  border-top: solid 3px #0892d0;
}

.section-title h2, h3, h4, h5 {
  margin-bottom: 5px;
  text-align: center;
  font-family: "Raleway", sans-serif;
  color: #36454f;

}

/* ---------------------------------------------About animation */

.section-svg {
  height: 75vh;
  padding-top: 0;
}

.svg-about text {
    cursor: pointer;
    visibility: hidden;
}

.svg-about text:hover {
    fill: #0892d0;
}

.text.is-visible {
    animation: visible 0.5s linear;
    animation-fill-mode: forwards;
}

.svg-about a {
    text-decoration: none;
}

.svg-about > line {
    stroke: #0892d0; 
    stroke-width: 4;
}
.line.is-visible  {
    stroke-dasharray: 8%;
    stroke-dashoffset: 8%;
    animation: move 0.5s linear;
    animation-fill-mode: forwards;
}

.vertical.is-visible  {
    stroke-dasharray: 19%;
    stroke-dashoffset: 19%;
    animation: move 0.75s linear;
    animation-fill-mode: forwards;
}

.svg-about > circle {
    stroke: #0892d0; 
    stroke-width: 3;
    fill: none;
}

.circle.is-visible {
    stroke-dasharray: 51%;
    stroke-dashoffset: 51%;
    animation: move 0.5s linear;
    animation-fill-mode: forwards;
}

.delay-0-25.is-visible {
    animation-delay: 0.25s;
}

.delay-0-5.is-visible {
    animation-delay: 0.5s;
}

.delay-0-75.is-visible {
    animation-delay: 0.75s;
}

.delay-1.is-visible {
    animation-delay: 1s;
}

.delay-1-25.is-visible {
    animation-delay: 1.25s;
}

.delay-1-5.is-visible {
    animation-delay: 1.5s;
}

.delay-1-75.is-visible {
    animation-delay: 1.75s;
}

.delay-2.is-visible {
    animation-delay: 2s;
}

.delay-2-5.is-visible {
    animation-delay: 2.5s;
}

.delay-2-75.is-visible {
    animation-delay: 2.75s;
}

.delay-3.is-visible {
    animation-delay: 3s;
}

.delay-3-25.is-visible {
    animation-delay: 3.25s;
}

.delay-3-5.is-visible {
    animation-delay: 3.5s;
}

.delay-3-75.is-visible {
    animation-delay: 3.75s;
}

.delay-4.is-visible {
    animation-delay: 4s;
}

.delay-4-25.is-visible {
    animation-delay: 4.25s;
}

.delay-4-5.is-visible {
    animation-delay: 4.5s;
}

.delay-5.is-visible {
    animation-delay: 5s;
}

.delay-5-25.is-visible {
    animation-delay: 5.25s;
}

.delay-5-5.is-visible {
    animation-delay: 5.5s;
}

@keyframes move {
        
    100% {
        stroke-dashoffset: 0;
        fill: #434546;
    }
}

@keyframes visible {
    100% {
        visibility: visible;
    }
}

/* ---------------------------------------------Skills section */

#skills img {
    display: block;
    margin: 0 auto;
    height: 20vh;
    border: solid 2px #36454f;
    border-radius: 50%;
}


blockquote, p {
    margin: 15px;
    font-family: "Quicksand", sans-serif;
    color:  #36454f;
    text-align: justify;
}

.progress-section {
    padding-top: 15px;
}

.progress {
    position: relative;
    height: 30px;
    margin-bottom: 5%;
}

.progress-type {
    position: absolute;
    left: 0px;
    font-weight: 400;
    font-family: "Raleway", sans-serif;
    padding: 3px 30px 2px 10px;
}

.progress-bar.progress-background {
    background-color: #f1f3f5;
}

.color-a + .progress-type {
    color:  #f1f3f5;
}

.progress-bar.color-a {
    background-color: #0892d0;
}

.color-b, .color-c + .progress-type {
    color:  #36454f;
}

.progress-bar.color-b {
    border: 2px solid  #0892d0;
    background-color:  #f1f3f5;
}

/* ---------------------------------------------Portfolio */

.card {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 100%;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.card img {
    width: 100%;
}

.caption {
  padding: 2px 16px;
}

/* ---------------------------------------------Modals */

#menu-modal .modal-dialog {
    position: relative;
    left: 20%;
    width: 80%;
    margin: 0;
    pointer-events: none;
}



.modal-top button {
    color: #f1f3f5;
    font-size: 250%;
    margin-right: 5px;
}

.modal-content {
    min-height: 100vh;
    background-color: #36454f;
}


.modal-content ul {
    line-height: 3;
    font-size: 150%;
    list-style-type: none;
    letter-spacing: 4px;
    text-align: right;
}

.modal-content a {
  font-family: "Quicksand", sans-serif;
  color: #f1f3f5;  
  text-decoration: none;
}

.modal-top img {
    margin: 15px;
    height: 20vh;
    border: solid 2px #f1f3f5;
    border-radius: 50%;
}

.modal-title {
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal-title h4, .modal-title h5 {
    text-align: right;
    color:  #f1f3f5;
    font-family: "Raleway", sans-serif;
}

.about-list h6 {
    font-family: "Raleway", sans-serif;
    color: #f1f3f5;
}


.about-list ul {
    font-size: 100%;
    list-style-type: circle;
    letter-spacing: 1px;
    color: #f1f3f5;
    font-family: "Quicksand", sans-serif;
    text-align: left;
}

.about-list blockquote, .about-list p {
    font-size: 100%;
    color: #f1f3f5;
    font-family: "Quicksand", sans-serif;
}

